add new mailing pass

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,8 +14,8 @@
   "MailSettings": {
     "Host_Address": "smtp.gmail.com",
     "Host_Port": 587,
-    "Host_UserName": "tomekwator1997@gmail.com",
-    "Host_Password": "hfnulzycbcaxuffj"
+    "Host_UserName": "tomaszreader1997@gmail.com",
+    "Host_Password": "fwezujxhfaolnqsa"
   },
   "Logging": {
     "LogLevel": {
