check user privileges

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
     "PhoneCollectionName": "Phones",
     "ContactCollectionName": "Contact",
     "TransactionCollectionName": "Transaction",
+    "TokenCollectionName": "Token",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MoonlightShadowDb"
   },
