--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,7 @@
     "ContactCollectionName": "Contact",
     "TransactionCollectionName": "Transaction",
     "TokenCollectionName": "Token",
+    "Salt": "T01E01",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MoonlightShadowDb"
   },
